syntax = "proto3";
package rarimo.rarimocore.rarimocore;

option go_package = "github.com/rarimo/rarimo-core/x/rarimocore/types";

import "tokenmanager/item.proto";
import "gogoproto/gogo.proto";

message IdentityGISTTransfer {
  // Hex 0x
  string contract = 1;
  string chain = 2;
  // Hex 0x
  string GISTHash = 3;
  string GISTReplacedBy = 11;
  // Dec
  string GISTCreatedAtTimestamp = 12;
  string GISTCreatedAtBlock = 13;
  // HEX 0x
  string replacedGISTHash = 17;
}

